--- a/matel.cabal
+++ b/matel.cabal
@@ -19,6 +19,6 @@ executable matel
     ghc-options:      -threaded -O2
     other-modules:    Metal.Base, GUI, Colour
 
-    build-depends:    base ^>=4.14.1.0, brick
+    build-depends:    base ^>=4.14.1.0, brick, bytestring
     hs-source-dirs:   src
     default-language: Haskell2010
