matel.cabal: A "Stability" declaration is added.

--- a/matel.cabal
+++ b/matel.cabal
@@ -26,6 +26,8 @@ Copyright:     (c) Varik Valefor 2021.
 
 Category:      Chat
 
+Stability:     unstable
+
 Source-repository head
   type:     git
   location: https://github.com/varikvalefor/matel
