The Matrix API functions are split into multiple files.

--- a/matel.cabal
+++ b/matel.cabal
@@ -36,9 +36,9 @@ executable matel
   main-is:          matel.hs
 
   ghc-options:      -haddock -threaded -O2
-  other-modules:    Metal.Base, Metal.MatrixAPI, Metal.Room,
-                    Metal.Messages.Standard, Metal.Messages.Encrypted,
-                    GUI, Colour
+  other-modules:    Metal.Base, Metal.MatrixAPI.HighLevel, Metal.Room,
+                    Metal.MatrixAPI.LowLevel, Metal.Messages.Standard,
+                    Metal.Messages.Encrypted, GUI, Colour
 
   build-depends:    base ^>=4.14.1.0, brick, bytestring
   hs-source-dirs:   src
