--- a/matel.cabal
+++ b/matel.cabal
@@ -40,6 +40,6 @@ executable matel
                     Metal.MatrixAPI.LowLevel, Metal.Messages.Standard,
                     Metal.Messages.Encrypted, GUI, Colour
 
-  build-depends:    base ^>=4.14.1.0, brick, bytestring
+  build-depends:    base ^>=4.14.1.0, brick, bytestring, vty
   hs-source-dirs:   src
   default-language: Haskell2010
