--- a/matel.cabal
+++ b/matel.cabal
@@ -43,3 +43,15 @@ executable matel
   build-depends:    base ^>=4.14.1.0, brick, bytestring, vty
   hs-source-dirs:   src
   default-language: Haskell2010
+
+executable matelcli
+  main-is:          matelcli.hs
+
+  ghc-options:      -haddock -threaded -O2
+  other-modules:    Metal.Base, Metal.MatrixAPI.HighLevel, Metal.Room,
+                    Metal.MatrixAPI.LowLevel, Metal.Messages.Standard,
+                    Metal.Messages.Encrypted, GUI, Colour
+
+  build-depends:    base ^>=4.14.1.0, brick, bytestring, vty
+  hs-source-dirs:   src
+  default-language: Haskell2010
