--- a/matel.cabal
+++ b/matel.cabal
@@ -53,9 +53,9 @@ executable matelcli
   other-modules:    Metal.Base, Metal.MatrixAPI.HighLevel, Metal.Room,
                     Metal.MatrixAPI.LowLevel, Metal.Messages.Standard,
                     Metal.Messages.Encrypted, Metal.Community,
-                    Metal.Space, GUI, Colour, Config
+                    Metal.Space, Config
 
-  build-depends:    base ^>=4.14.1.0, brick, bytestring, vty,
+  build-depends:    base ^>=4.14.1.0, bytestring, vty,
                     http-conduit
   hs-source-dirs:   src
   default-language: Haskell2010
