--- a/matel.cabal
+++ b/matel.cabal
@@ -55,7 +55,6 @@ executable matelcli
                     Metal.Messages.Encrypted, Metal.Community,
                     Metal.Space, Config
 
-  build-depends:    base ^>=4.14.1.0, bytestring, vty,
-                    http-conduit
+  build-depends:    base ^>=4.14.1.0, bytestring, http-conduit
   hs-source-dirs:   src
   default-language: Haskell2010
