--- a/matel.cabal
+++ b/matel.cabal
@@ -41,8 +41,8 @@ executable matel
                     Metal.Messages.Encrypted, Metal.Community,
                     Metal.Space, GUI, Colour, Config
 
-  build-depends:    base ^>=4.14.1.0, brick, bytestring, vty,
-                    http-conduit
+  build-depends:    base ^>=4.14.1.0, brick, bytestring, vty, aeson,
+                    http-conduit, text, base64-bytestring
   hs-source-dirs:   src
   default-language: Haskell2010
 
@@ -55,6 +55,7 @@ executable matelcli
                     Metal.Messages.Encrypted, Metal.Community,
                     Metal.Space, Config
 
-  build-depends:    base ^>=4.14.1.0, bytestring, http-conduit
+  build-depends:    base ^>=4.14.1.0, bytestring, http-conduit, aeson,
+                    text, base64-bytestring
   hs-source-dirs:   src
   default-language: Haskell2010
