--- a/matel.cabal
+++ b/matel.cabal
@@ -39,7 +39,8 @@ executable matel
   other-modules:    Metal.Base, Metal.MatrixAPI.HighLevel, Metal.Room,
                     Metal.MatrixAPI.LowLevel, Metal.Messages.Standard,
                     Metal.Messages.Encrypted, Metal.Community,
-                    Metal.Space, GUI, Colour, Config
+                    Metal.Space, GUI, Colour, Config,
+                    Metal.MatrixAPI.LowLevel.Types
 
   build-depends:    base ^>=4.14.1.0, brick, bytestring, vty, aeson,
                     http-conduit, text, base64-bytestring
@@ -53,7 +54,7 @@ executable matelcli
   other-modules:    Metal.Base, Metal.MatrixAPI.HighLevel, Metal.Room,
                     Metal.MatrixAPI.LowLevel, Metal.Messages.Standard,
                     Metal.Messages.Encrypted, Metal.Community,
-                    Metal.Space, Config
+                    Metal.Space, Config, Metal.MatrixAPI.LowLevel.Types
 
   build-depends:    base ^>=4.14.1.0, bytestring, http-conduit, aeson,
                     text, base64-bytestring
