--- a/matel.cabal
+++ b/matel.cabal
@@ -47,7 +47,7 @@ executable matel
                     Metal.OftenUsedFunctions
 
   build-depends:    base ^>=4.14.1.0, brick, bytestring, vty, aeson,
-                    http-conduit, text, utf8-string
+                    http-conduit, text
   hs-source-dirs:   src
   default-language: Haskell2010
 
@@ -62,6 +62,6 @@ executable matelcli
                     Metal.User, Metal.Auth, Metal.OftenUsedFunctions
 
   build-depends:    base ^>=4.14.1.0, bytestring, http-conduit, aeson,
-                    text, utf8-string
+                    text
   hs-source-dirs:   src
   default-language: Haskell2010
