matel.cabal: Markup improves.

--- a/matel.cabal
+++ b/matel.cabal
@@ -18,7 +18,7 @@ Description:   Matel is a currently incomplete Haskell-based Matrix
                Alternatively, men who wish to fix such bugs when such
                bugs are encountered can follow the contribution
                guidelines which are described at Matel's GitHub page,
-               http://github.com/varikvalefor/matel.
+               http:\/\/github.com\/varikvalefor\/matel.
 
 License:       BSD-3-Clause
 License-file:  LICENSE
