Default records are added.

--- a/matel.cabal
+++ b/matel.cabal
@@ -46,6 +46,7 @@ library
     Metal.MatrixAPI.LowLevel.Types
     Metal.Messages.Encrypted
     Metal.Messages.Standard
+    Metal.Default
   other-extensions:
     OverloadedStrings
     TemplateHaskell
