--- a/matel.cabal
+++ b/matel.cabal
@@ -75,6 +75,7 @@ executable matel
     aeson,
     http-conduit,
     text,
+    directory,
     matel
   hs-source-dirs:   app
   default-language: Haskell2010
@@ -90,6 +91,7 @@ executable matelcli
     http-conduit,
     aeson,
     text,
+    directory,
     matel
   hs-source-dirs:   app
   default-language: Haskell2010
