--- a/matel.cabal
+++ b/matel.cabal
@@ -56,6 +56,7 @@ library
     bytestring,
     http-conduit,
     aeson,
+    string-random,
     text
   hs-source-dirs:   src
   default-language: Haskell2010
