--- a/matel.cabal
+++ b/matel.cabal
@@ -16,7 +16,9 @@ description:   Matel is a currently incomplete Haskell-based Matrix
                .
                Identified bugs and similar nasties can be e-mailed to
                the maintainer such that the resulting message's header
-               contains the phrase "MATEL CONTRIBUTION".
+               contains the phrase "MATEL CONTRIBUTION".  VARIK welcomes
+               bug reports, even if VARIK may immediately respond to
+               such bug reports by sighing or saying "God damn it".
                .
                Alternatively, men who wish to fix such bugs when such
                bugs are encountered can follow the contribution
