--- a/matel.cabal
+++ b/matel.cabal
@@ -54,6 +54,7 @@ library
     -- is not of DIRECT use to things which exist "outside of"
     -- Metal.MatrixAPI.LowLevel; as such, Metal.MatrixAPI.LowLevel.Types
     -- is classified as an "other module".
+    Metal.MatrixAPI.LowLevel.GenerateAuth
   other-extensions:
     OverloadedStrings
     TemplateHaskell
