--- a/matel.cabal
+++ b/matel.cabal
@@ -55,9 +55,22 @@ library
     -- Metal.MatrixAPI.LowLevel; as such, Metal.MatrixAPI.LowLevel.Types
     -- is classified as an "other module".
     Metal.MatrixAPI.LowLevel.ResponseToWhatever
+    -- The functions of Metal.MatrixAPI.LowLevel.ResponseToWhatever are
+    -- of use only within Metal.MatrixAPI.LowLevel; as such,
+    -- Metal.MatrixAPI.LowLevel.ResponseToWhatever is not exposed.
     Metal.MatrixAPI.LowLevel.GetRoomInformation
+    -- Metal.MatrixAPI.LowLevel.GetRoomInformation.getRoomInformation is
+    -- of use to external things... but is exported by
+    -- Metal.MatrixAPI.LowLevel.  As such, exposing GetRoomInformation
+    -- would be redundant and pointless.
     Metal.MatrixAPI.LowLevel.GenerateAuth
+    -- Metal.MatrixAPI.LowLevel.ResponseToWhatever.generateAuthdRequest
+    -- is of use only within Metal.MatrixAPI.LowLevel; as such,
+    -- Metal.MatrixAPI.LowLevel.GenerateAuth is not exposed.
     Metal.MatrixAPI.LowLevel.Send.Text
+    -- Metal.MatrixAPI.LowLevel.Send.Text.sendTextMessage is of use to
+    -- external things... but is exported by Metal.MatrixAPI.LowLevel.
+    -- As such, exposing Send.Text would be redundant and pointless.
   other-extensions:
     OverloadedStrings
     TemplateHaskell
