--- a/matel.cabal
+++ b/matel.cabal
@@ -83,6 +83,7 @@ library
     http-conduit,
     aeson,
     string-random,
+    async,
     text
   hs-source-dirs: src
   default-language: Haskell2010
