--- a/matel.cabal
+++ b/matel.cabal
@@ -85,6 +85,8 @@ library
     aeson,
     string-random,
     async,
+    lens-aeson,
+    lens,
     text
   hs-source-dirs: src
   default-language: Haskell2010
