--- a/matel.cabal
+++ b/matel.cabal
@@ -115,11 +115,11 @@ executable matelcli
     GetAuth
   build-depends:
     base ^>=4.14.1.0,
-    bytestring,
     http-conduit,
-    aeson,
-    text,
+    bytestring,
     directory,
-    matel
+    aeson,
+    matel,
+    text
   hs-source-dirs: app
   default-language: Haskell2010
