--- a/matel.cabal
+++ b/matel.cabal
@@ -14,16 +14,8 @@ description:   Matel is a currently incomplete Haskell-based Matrix
                infrastructure can now be used within other projects via
                the "matel" library.
                .
-               Identified bugs and similar nasties can be e-mailed to
-               the maintainer such that the resulting message's header
-               contains the phrase "MATEL CONTRIBUTION".  VARIK welcomes
-               bug reports, even if VARIK may immediately respond to
-               such bug reports by sighing or saying "God damn it".
-               .
-               Alternatively, men who wish to fix such bugs when such
-               bugs are encountered can follow the contribution
-               guidelines which are described at Matel's GitHub page,
-               http:\/\/github.com\/varikvalefor\/matel.
+               The guidelines for contributing to Matel and for
+               submitting bug reports are visible in README.md.
 bug-reports:   http://github.com/varikvalefor/matel/issues
 license:       BSD-3-Clause
 author:        Varik Valefor
