--- a/matel.cabal
+++ b/matel.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.4
 name:          matel
-version:       0.1.0.6
+version:       0.1.0.7
 synopsis:      TUI client for the Matrix instant messaging service.
 description:   Matel is a currently incomplete Haskell-based Matrix
                client.  Matel aims to have a terminal user interface
@@ -39,6 +39,7 @@ library
     Metal.Messages.Standard
     Metal.Default
     Metal.FavoriteNoise
+    Metal.EventCommonFields
   other-modules:
     -- The following modules export stuff which is of real use only
     -- within Metal.MatrixAPI.LowLevel.
