Support for the "m.file" message is improved.

--- a/matel.cabal
+++ b/matel.cabal
@@ -39,6 +39,7 @@ library
     Metal.Messages.Standard
     Metal.Messages.EncryptedFile
     Metal.Messages.VideoInfo
+    Metal.Messages.FileInfo
     Metal.Messages.ThumbnailInfo
     Metal.Default
     Metal.FavoriteNoise
