--- a/matel.cabal
+++ b/matel.cabal
@@ -103,7 +103,6 @@ executable matelcli
     base ^>=4.14.1.0,
     directory,
     matel,
-    text,
-    filepath
+    text
   hs-source-dirs: app
   default-language: Haskell2010
