Matel now supports pledge(2) and unveil(2).

--- a/matel.cabal
+++ b/matel.cabal
@@ -81,6 +81,7 @@ executable matel
   ghc-options: -haddock -threaded -O2 -dynamic
   other-modules:
     TUI,
+    Plegg,
     Colour,
     GetAuth
   build-depends:
