--- a/matel.cabal
+++ b/matel.cabal
@@ -72,6 +72,7 @@ library
     lens-aeson,
     aeson-quick,
     lens,
+    http-types,
     text
   hs-source-dirs: src
   default-language: Haskell2010
