src/Metal/MatrixAPI/LowLevel.hs: Some stuff is moved to Metal.MatrixAPI.LowLevel.Crypto.

--- a/matel.cabal
+++ b/matel.cabal
@@ -47,6 +47,7 @@ library
     -- The following modules export stuff which is of real use only
     -- within Metal.MatrixAPI.LowLevel.
     Metal.MatrixAPI.LowLevel.Types
+    Metal.MatrixAPI.LowLevel.Crypto
     Metal.MatrixAPI.LowLevel.ResponseToWhatever
     Metal.MatrixAPI.LowLevel.GetRoomInformation
     Metal.MatrixAPI.LowLevel.RecordCombination
