--- a/matel.cabal
+++ b/matel.cabal
@@ -74,6 +74,7 @@ library
     aeson-quick,
     lens,
     http-types,
+    cryptonite,
     text
   hs-source-dirs: src
   default-language: Haskell2010
