--- a/matel.cabal
+++ b/matel.cabal
@@ -43,6 +43,7 @@ library
     Metal.Default
     Metal.FavoriteNoise
     Metal.EventCommonFields
+    Metal.MatrixAPI.LowLevel.Crypto.Miscellaneous
   other-modules:
     -- The following modules export stuff which is of real use only
     -- within Metal.MatrixAPI.LowLevel.
@@ -74,6 +75,7 @@ library
     lens,
     http-types,
     cryptonite,
+    memory,
     text
   hs-source-dirs: src
   default-language: Haskell2010
