--- a/matel.cabal
+++ b/matel.cabal
@@ -64,19 +64,19 @@ library
     DeriveAnyClass
   build-depends:
     base ^>= 4.14.1.0,
-    bytestring,
-    basic-prelude,
-    http-conduit,
-    aeson,
-    string-random,
-    async,
-    lens-aeson,
-    aeson-quick,
-    lens,
-    http-types,
-    cryptonite,
-    memory,
-    text
+    bytestring == 0.10.12.0,
+    basic-prelude >= 0.7.0 && < 0.8,
+    http-conduit >= 2.3.8 && < 2.4,
+    aeson >= 1.5.6 && < 1.6,
+    string-random >= 0.1.4 && < 0.2,
+    async >= 2.2.4 && < 2.3,
+    lens-aeson == 1.1.1,
+    aeson-quick == 0.1.3,
+    lens == 5.0.1,
+    http-types >= 0.12.3 && < 0.13,
+    cryptonite == 0.29,
+    memory >= 0.16.0 && < 0.17,
+    text >= 1.2.4 && < 1.3
   hs-source-dirs: src
   default-language: Haskell2010
 
@@ -90,11 +90,11 @@ executable matel
     GetAuth
   build-depends:
     base ^>= 4.14.1.0,
-    directory,
-    brick,
+    directory >= 1.3.6 && < 1.4,
+    brick >= 0.64.2 && < 0.65,
     matel,
-    text,
-    vty
+    text >= 1.2.4 && < 1.3,
+    vty >= 5.33 && < 5.34
   hs-source-dirs: app
   default-language: Haskell2010
 
@@ -106,8 +106,8 @@ executable matelcli
     Plegg
   build-depends:
     base ^>= 4.14.1.0,
-    directory,
+    directory >= 1.3.6 && < 1.4,
     matel,
-    text
+    text >= 1.2.4 && < 1.3
   hs-source-dirs: app
   default-language: Haskell2010
