--- a/matel.cabal
+++ b/matel.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.4
 name:          matel
-version:       0.1.0.11
+version:       0.1.0.12
 synopsis:      TUI client for the Matrix instant messaging service.
 description:   Matel is a currently incomplete Haskell-based Matrix
                client.  Matel aims to have a terminal user interface
@@ -108,6 +108,7 @@ executable matelcli
     base ^>= 4.14.1.0,
     directory >= 1.3.6 && < 1.4,
     matel,
-    text >= 1.2.4 && < 1.3
+    text >= 1.2.4 && < 1.3,
+    bytestring == 0.10.12.0
   hs-source-dirs: app
   default-language: Haskell2010
