--- a/matel.cabal
+++ b/matel.cabal
@@ -65,7 +65,6 @@ library
     DeriveAnyClass
   build-depends:
     base ^>= 4.14.1.0,
-    bytestring == 0.10.12.0,
     basic-prelude >= 0.7.0 && < 0.8,
     http-conduit >= 2.3.8 && < 2.4,
     aeson >= 1.5.6 && < 1.6,
@@ -78,6 +77,11 @@ library
     cryptonite == 0.29,
     memory >= 0.16.0 && < 0.17,
     text >= 1.2.4 && < 1.3
+    bytestring == 0.10.12.0,
+    -- \^ Using both Text and ByteString may seem a bit much.  However,
+    -- the purpose of Text is not the purpose of ByteString; Text
+    -- contains _text_, whereas ByteString contains byte-oriented data,
+    -- e.g., digital negatives and compiled binaries.  Who'd-a-thunk it?
   hs-source-dirs: src
   default-language: Haskell2010
 
@@ -111,5 +115,7 @@ executable matelcli
     matel,
     text >= 1.2.4 && < 1.3,
     bytestring == 0.10.12.0
+    -- \^ bytestring is used for binary stuff.
+    -- text is used for text-based data.
   hs-source-dirs: app
   default-language: Haskell2010
