--- a/matel.cabal
+++ b/matel.cabal
@@ -76,8 +76,8 @@ library
     http-types >= 0.12.3 && < 0.13,
     cryptonite == 0.29,
     memory >= 0.16.0 && < 0.17,
-    text >= 1.2.4 && < 1.3
-    bytestring == 0.10.12.0,
+    text >= 1.2.4 && < 1.3,
+    bytestring == 0.10.12.0
     -- \^ Using both Text and ByteString may seem a bit much.  However,
     -- the purpose of Text is not the purpose of ByteString; Text
     -- contains _text_, whereas ByteString contains byte-oriented data,
