Encrypted is now a submodule of Messages.
Somewhat amusingly, the documentation of Metal.Encrypted indicates that Metal.Encrypted SHOULD be Metal.Messages.Encrypted.  This change may be inevitable.

--- a/matel.cabal
+++ b/matel.cabal
@@ -35,7 +35,7 @@ library
     Metal.OftenUsedFunctions
     Metal.MatrixAPI.HighLevel
     Metal.MatrixAPI.LowLevel
-    Metal.Encrypted
+    Metal.Messages.Encrypted
     Metal.Messages.Standard
     Metal.Messages.EncryptedFile
     Metal.Messages.FileInfo
