StrictData is now a globally-used extension.  This modification should kick some potential performance problems in the 'nads.

--- a/matel.cabal
+++ b/matel.cabal
@@ -54,6 +54,8 @@ library
     Metal.MatrixAPI.LowLevel.RecordCombination
     Metal.MatrixAPI.LowLevel.FetchEvents
     Metal.MatrixAPI.LowLevel.HTTP
+  default-extensions:
+    StrictData
   other-extensions:
     OverloadedStrings
     TemplateHaskell
