--- a/matel.cabal
+++ b/matel.cabal
@@ -121,6 +121,16 @@ test-suite send-unencrypted-message
   type:           exitcode-stdio-1.0
   main-is:        send-unencrypted-message.hs
   hs-source-dirs: testes/matelcli
+  default-language: Haskell2010
   build-depends:
     base ^>= 4.14.1.0,
     process == 1.6.*
+
+test-suite grab-unencrypted-messages
+  type:           exitcode-stdio-1.0
+  main-is:        grab-unencrypted-messages.hs
+  hs-source-dirs: testes/matelcli
+  build-depends:
+    base ^>= 4.14.1.0,
+    process == 1.6.*
+  default-language: Haskell2010
