--- a/matel.cabal
+++ b/matel.cabal
@@ -134,3 +134,12 @@ test-suite grab-unencrypted-messages
     base ^>= 4.14.1.0,
     process == 1.6.*
   default-language: Haskell2010
+
+test-suite drip-drip-drip-goes-the-water
+  type:           exitcode-stdio-1.0
+  main-is:        sync.hs
+  hs-source-dirs: testes/matelcli
+  build-depends:
+    base ^>= 4.14.1.0,
+    process == 1.6.*
+  default-language: Haskell2010
