--- a/matel.cabal
+++ b/matel.cabal
@@ -144,3 +144,14 @@ test-suite drip-drip-drip-goes-the-water
     base ^>= 4.14.1.0,
     process == 1.6.*
   default-language: Haskell2010
+
+test-suite fromjson-encrypted
+  type:           exitcode-stdio-1.0
+  main-is:        encrypted.hs
+  hs-source-dirs: testes/core/fromjson
+  build-depends:
+    matel,
+    base ^>= 4.14.1.0,
+    bytestring  == 0.10.12.0,
+    aeson >= 1.5.6 && < 1.6
+  default-language: Haskell2010
