--- a/matel.cabal
+++ b/matel.cabal
@@ -151,5 +151,9 @@ test-suite oeuf
   hs-source-dirs: testes/core
   build-depends:
     matel,
-    base ^>= 4.14.1.0
+    base ^>= 4.14.1.0,
+    bytestring == 0.10.12.0,
+    text >= 1.2.4 && < 1.3
   default-language: Haskell2010
+  other-extensions:
+    OverloadedStrings
