--- a/matel.cabal
+++ b/matel.cabal
@@ -76,6 +76,7 @@ library
     utf8-string == 1.0.*,
     text >= 1.2.4 && < 1.3,
     unordered-containers >= 0.2.19 && < 0.3,
+    uri-encode >= 1.5 && < 1.6,
     bytestring == 0.10.12.0
     -- \^ Using both Text and ByteString may seem a bit much.  However,
     -- the purpose of Text is not the purpose of ByteString; Text
